testing/tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_bool/tree-sitter.generated-error.txt
tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_bool/input.essence:3:15:
  |
3 | such that x = b
  |               ^
Type error: b
	Expected: int
	Got: bool